[package]
name = "unfair_advantage_coloring"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"

[profile.dev.package."*"]
opt-level = 3

[profile.dev]
opt-level = 1

[profile.release]
lto = true
codegen-units = 1

[dependencies]
async-compat = "0.2"
bevy = "0.6"
bevy_prototype_lyon = "0.4"
getrandom = { version = "0.2", features = ["js"] }
graphql_client = "0.10.0"
serde = "1"
rand = "0.8"
reqwest = { version = "0.11.9", features = ["json"] }
futures-lite = "1.4.0"
