[package]
name = "unfair_advantage_coloring"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"

[profile.dev.package."*"]
opt-level = 3

[profile.dev]
opt-level = 1

[profile.release]
lto = true
codegen-units = 1

[dependencies]
async-compat = "0.2"
async-channel = "1.6"
base64 = "0.13"
bevy = "0.6"
bevy_prototype_lyon = "0.4"
bevy_egui = "0.11"
getrandom = { version = "0.2", features = ["js"] }
graphql_client = { version = "0.10.0", features = ["reqwest"] }
serde = "1"
rand = "0.8"
reqwest = { version = "0.11.9", features = ["json"] }
tokio = { version = "1", features = ["rt"] }
futures-lite = "1.4.0"

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2.79"
wasm-bindgen-futures = "0.4.29"
js-sys = "0.3.6"
reqwest = "0.11.3"
